--- a/src/styles/constants/_typography.scss
+++ b/src/styles/constants/_typography.scss
@@ -1,23 +1,23 @@
 $font-main: "Roboto", sans-serif;
 $font-main-weight: 400;
 
-$font-size-title: 19px;
-$font-height-title: 1.2;
-$font-spacing-title: normal;
+$font-size-19: 19px;
+$font-height-19: 1.2;
+$font-spacing-19: normal;
 
-$font-size-title-small: 17px;
-$font-height-title-small: 1.2;
-$font-spacing-title-small: normal;
+$font-size-title-17: 17px;
+$font-height-title-17: 1.2;
+$font-spacing-title-17: normal;
 
-$font-size-nav: 14px;
-$font-height-nav: 1.5;
-$font-spacing-nav: normal;
+$font-size-14: 14px;
+$font-height-14: 1.5;
+$font-spacing-14: normal;
 
-$font-size-button: 12px;
-$font-height-button: 1;
-$font-transform-button: uppercase;
-$font-spacing-button: 0.08em;
+$font-size-12: 12px;
+$font-height-12: 1;
+$font-transform-12: uppercase;
+$font-spacing-12: 0.08em;
 
-$font-size-caption: 11px;
-$font-height-caption: 1.5;
-$font-spacing-caption: normal;
+$font-size-11: 11px;
+$font-height-11: 1.5;
+$font-spacing-11: normal;
