🐛 Remove title from typography constants' name

--- a/src/styles/constants/_typography.scss
+++ b/src/styles/constants/_typography.scss
@@ -5,9 +5,9 @@ $font-size-19: 19px;
 $font-height-19: 1.2;
 $font-spacing-19: normal;
 
-$font-size-title-17: 17px;
-$font-height-title-17: 1.2;
-$font-spacing-title-17: normal;
+$font-size-17: 17px;
+$font-height-17: 1.2;
+$font-spacing-17: normal;
 
 $font-size-14: 14px;
 $font-height-14: 1.5;
