--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 @import "./base/normalize";
 @import "./base/reset";
+@import "./base/globals";
 
 @import "./mixins/responsive";
 @import "./mixins/text-styles";
