--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./constants/typography";
 @import "./constants/breakpoints";
+@import "./constants/colors";
 
 @import "./base/normalize";
 @import "./base/reset";
