💄 Style GNB component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 
 @import "../components/category-card/category-card.styles.scss";
 @import "../components/directory/directory.styles.scss";
+@import "../routes/gnb/gnb.styles.scss";
