💄 Imported style of FormInput component to main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,4 +12,6 @@
 
 @import "../components/category-card/category-card.styles.scss";
 @import "../components/directory/directory.styles.scss";
+@import "../components/form-input/form-input.styles.scss";
+
 @import "../routes/gnb/gnb.styles.scss";
