💄 Add text-style and typography of 35

--- a/src/styles/constants/_typography.scss
+++ b/src/styles/constants/_typography.scss
@@ -1,6 +1,10 @@
 $font-main: "Roboto", sans-serif;
 $font-main-weight: 400;
 
+$font-size-35: 35px;
+$font-height-35: 1.2;
+$font-spacing-35: normal;
+
 $font-size-19: 19px;
 $font-height-19: 1.2;
 $font-spacing-19: normal;
