--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,4 @@
 @import "../components/form-input/form-input.styles.scss";
 
 @import "../routes/gnb/gnb.styles.scss";
+@import "../routes/sign-in/sign-in.styles.scss";
