--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import "../components/category-card/category-card.styles.scss";
 @import "../components/directory/directory.styles.scss";
 @import "../components/form-input/form-input.styles.scss";
+@import "../components/sign-up-form/sign-up-form.styles.scss";
 
 @import "../routes/gnb/gnb.styles.scss";
 @import "../routes/sign-in/sign-in.styles.scss";
