--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -1,5 +1,6 @@
 .sign-up-form {
   width: 100%;
+  margin-bottom: 32px;
 
   &-header {
     @include text-style(35, $primary);
@@ -7,5 +8,15 @@
     width: 100%;
     text-align: center;
     font-weight: $font-main-weight;
+  }
+
+  &-form {
+    @include column-flex;
+  }
+
+  .link-to-login {
+    @include text-style(11, $primary);
+    margin-top: 32px;
+    font-style: italic;
   }
 }
