--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -15,3 +15,9 @@
     display: none !important;
   }
 }
+
+.sm-only {
+  @media screen and (min-width: $md-breakpoint) {
+    display: none !important;
+  }
+}
