--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,10 +10,14 @@
 @import "./mixins/text-styles";
 @import "./mixins/flexbox";
 
-@import "../components/category-card/category-card.styles.scss";
-@import "../components/directory/directory.styles.scss";
+@import "../components/button/button.styles.scss";
 @import "../components/form-input/form-input.styles.scss";
+@import "../components/category-card/category-card.styles.scss";
+
+@import "../components/directory/directory.styles.scss";
 @import "../components/sign-up-form/sign-up-form.styles.scss";
+@import "../components/log-in-form/log-in-form.styles.scss";
 
 @import "../routes/gnb/gnb.styles.scss";
-@import "../routes/sign-in/sign-in.styles.scss";
+@import "../routes/sign-up/sign-up.styles.scss";
+@import "../routes/log-in/log-in.styles.scss";
