💄 Modify className from .link-to-login to .link-to-log-in in SignUpForm style

--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -14,7 +14,7 @@
     @include column-flex;
   }
 
-  .link-to-login {
+  .link-to-log-in {
     @include text-style(14, $primary);
     margin-top: 32px;
     font-style: italic;
