--- a/src/components/log-in-form/log-in-form.styles.scss
+++ b/src/components/log-in-form/log-in-form.styles.scss
@@ -12,6 +12,34 @@
 
   &-form {
     @include column-flex;
+    margin-bottom: 32px;
+  }
+
+  &-divider {
+    @include flex;
+    margin-bottom: 32px;
+
+    &::before,
+    &::after {
+      content: "";
+      display: inline-block;
+      width: 18vw;
+      height: 1px;
+      background-color: $primary;
+    }
+
+    .text {
+      @include flex;
+      @include text-style(17, $primary);
+      padding: 0 22px;
+      background-color: $background;
+    }
+  }
+
+  &-google {
+    @include flex;
+    margin-bottom: 35px;
+    width: 100%;
   }
 
   .link-to-sign-up {
