--- a/src/components/log-in-form/log-in-form.styles.scss
+++ b/src/components/log-in-form/log-in-form.styles.scss
@@ -23,7 +23,7 @@
     &::after {
       content: "";
       display: inline-block;
-      width: 18vw;
+      width: 100%;
       height: 1px;
       background-color: $primary;
     }
