--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./mixins/responsive";
 @import "./mixins/text-styles";
 @import "./mixins/flexbox";
+@import "./mixins/positions";
 
 @import "../components/button/button.styles.scss";
 @import "../components/form-input/form-input.styles.scss";
