--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -5,17 +5,31 @@
   border-radius: 2px;
   cursor: pointer;
 
-  &:hover {
-    opacity: 0.6;
-  }
-
   &.outlined {
     border: 1px solid $border;
+    transition: 300ms ease-in-out;
+
+    &:hover {
+      opacity: 0.6;
+    }
   }
 
   &.filled {
     color: $primary-text;
     background-color: $primary;
+    transition: 300ms ease-in-out;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  &.google {
+    background-color: $primary-text;
+
+    &:before {
+      content: "";
+    }
   }
 
   &.btn-sm {
